# EECS568_team_14_open_vins

./: CMakeLists.txt  ReadMe.md
invariant-ekf/: CMakeLists.txt  package.xml
invariant-ekf/include/: InEKF.h  RobotState.h
invariant-ekf/src/: InEKF.cpp  RobotState.cpp
invariant-ekf/src/examples/: landmarks.cpp
invariant-ekf/src/tests/: correction_speed.cpp  test_msckf.cpp
ov_msckf/: CMakeLists.txt
ov_msckf/launch/: display.rviz  riekf_difficult.launch  riekf_easy.launch  riekf_medium.launch  riekf_tutorial.launch
ov_msckf/src/: run_drone_riekf_snapdragon.cpp  run_drone_serial_snapdragon.cpp  run_serial_riekf.cpp
ov_msckf/src/core/: RIEKFManager.cpp  RIEKFManager.h  RIEKFVisualizer.cpp  RIEKFVisualizer.h  RosVisualizer.cpp  RosVisualizer.h  VioManager.cpp  conversion_utils.h
ov_msckf/src/state/: Propagator.cpp  Propagator.h  State.h  StateHelper.cpp  StateHelper.h
ov_msckf/src/update/: UpdaterMSCKF.cpp  UpdaterMSCKF.h
test_riekf/: CMakeLists.txt  package.xml
test_riekf/src/: FeatureLandmarkConverter.h  gtest_simple.cpp  latexit.m  observation.m  test_FeatureLandmarkConverter.cpp  uncertainty_propagation.m
