<?xml version="1.0"?>
<package>
    <!-- Package Information -->
    <name>rh_inekf</name>
    <version>1.0.0</version>
    <description>
        Implementation of the InEKF.
    </description>

    <!-- Code Authors -->
    <author email="lowmanj@umich.edu">Joseph Lowman</author>
    <maintainer email="lowmanj@umich.edu">Joseph Lowman</maintainer>


    <!-- Licensing -->
    <license>GNU General Public License v3.0</license>

    <!-- Dependencies which this package needs to build itself. -->
    <buildtool_depend>catkin</buildtool_depend>


</package>
