<?xml version="1.0"?>
<package>
    <!-- Package Information -->
    <name>test_riekf</name>
    <version>1.0.0</version>
    <description>
        Testing right invariant EKF.
    </description>

    <!-- Code Authors -->
    <author email="lowmanj@umich.edu">Joseph Lowman</author>
    <maintainer email="lowmanj@umich.edu">Joseph Lowman</maintainer>

    <!-- Licensing -->
    <license>GNU General Public License v3.0</license>

    <!-- Dependencies which this package needs to build itself. -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- Dependencies needed to compile this package. -->
<!--     <build_depend>cmake_modules</build_depend>
    <build_depend>ov_riekf</build_depend> -->

    <!-- Dependencies needed after this package is compiled. -->
<!--     <run_depend>roscpp</run_depend>
    <run_depend>ov_core</run_depend>
    <run_depend>ov_msckf</run_depend>
    <run_depend>ov_riekf</run_depend> -->


</package>
